# swagger-output.json
@@ -179,7 +179,7 @@
                 "hourAssignee": {
                   "example": "any"
                 },
-                "startingHour": {
+                "startingDate": {
                   "example": "any"
                 },
                 "duration": {
@@ -281,6 +281,39 @@
           },
           "500": {
             "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/hours/filterByDate": {
+      "post": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "hourAssignee": {
+                  "example": "any"
+                },
+                "startDate": {
+                  "example": "any"
+                },
+                "finalDate": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "Created"
+          },
+          "400": {
+            "description": "Bad Request"
           }
         }
       }
